# Kyivstar_big_data_school_trial_task

./: decision.ipynb  pyproject.toml
