[tool.poetry]
name = "kyivstar_big_data_school_trial_task"
version = "0.1.0"
description = ""
authors = ["Mr. Oleksandr Tarasov <tarasik201617@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
jupyter = "^1.0.0"
pandas = "^1.1.3"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
